--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./tp.js"> </script>
 </head>
 <body>
-    
+    <body>
+        <header>
+            <h1>Alejandro Lizarazu</h1>
+        </header>
+        <main>
+            <section class="hero">
+                <h2>Lo que necesitas y mas</h2>
+                <p>Estamos emocionados de tenerte aquí, explorando el talento y la creatividad de un profesional apasionado que ha dedicado su vida a la excelencia en el ámbito audiovisual y periodístico.</p>
+            </section>
+            <section class="bienvenidos">
+                <h2>Bienvenidos</h2>
+                <p>En este espacio digital, te sumergirás en el universo único de Alejandro, donde la habilidad para dar vida a historias a través de la edición de videos se combina con la destreza para crear experiencias visuales impactantes en la web. Además, su habilidad como redactor periodístico añade una capa adicional de profundidad, ofreciéndote una visión completa de su versatilidad y habilidades multidisciplinarias.
+            </section>
+            <section class="subtitle">
+                <h2>servicios</h2>
+            </section>
+            <section class="productos ">
+                <div>
+                    <img src="" alt="">
+                    <h3>edicion de video</h3>
+                    <a href=""></a>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3>maquetador web</h3>
+                    <a href=""></a>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3>redaccion periodistica</h3>
+                    <a href=""></a>
+                </div>
+            </section>
+        </main>
+        <footer id="pie">
+            <h2>Alejandro Lizarazu</h2>
+        </footer>
 </body>
-</html>
+</html> 
